{
    "name": "UnitychanControls",
    "maps": [
        {
            "name": "Player",
            "id": "9b3b6e78-7157-4847-85ad-b66d9b6ca801",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "6332590f-dac4-44af-aa5b-558e1545282e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "6bd8bc61-cff5-4cb9-a4b0-2064d6aa9d3c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "6b5cc30c-634d-4668-b34f-f9f155cff7a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d278354b-be61-46f2-82e7-5f2b993a70a2",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c95266a4-c616-48bc-ab0f-f4a8ff3c97d1",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eabd02c0-07be-4894-ada7-06e457b459d4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}